--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div style="width: 352px; height: 400px; left: 0px; top: 0px; position: absolute; background: white; border-radius: 10px; border: 2px #EE589C solid"></div>
         <div style="width: 60px; height: 60px; left: 150px; top: 41px; position: absolute; background: white">
             <div style="width: 60px; height: 60px; left: 1.62px; top: 1.62px; position: absolute">
-                <div style="width: 60px; height: 60px; left: 0px; top: 0px; position: absolute; background: white"><img src="ux.png" /></div>
+                <div style="width: 60px; height: 60px; left: 0px; top: 0px; position: absolute; background: white"><a href="https://ixdia.csueastbay.edu/about.html"><img src="ux.png" /></a></div>
 
 
             </div>
@@ -121,14 +121,14 @@
         <div style="width: 52px; height: 52px; left: 534px; top: 41px; position: absolute; background: white; justify-content: center; align-items: center; display: inline-flex">
             <div style="width: 60px; height: 60px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
                 <div style="width: 60px; height: 60px; left: 1.62px; top: 1.62px; position: absolute">
-                    <div style="width: 60px; height: 60; left: 0px; top: 0px; position: absolute; background: white"><img src="click.png" /></div>
+                    <div style="width: 60px; height: 60; left: 0px; top: 0px; position: absolute; background: white"><a href="https://ixdia.csueastbay.edu/contact.html"><img src="click.png" /></div>
                 </div>
             </div>
         </div>
         <div style="width: 60px; height: 60px; left: 918px; top: 41px; position: absolute; background: white; justify-content: center; align-items: center; display: inline-flex">
             <div style="width: 60px; height: 60px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
                 <div style="width: 60px; height: 60px; left: 1.62px; top: 1.62px; position: absolute">
-                    <div style="width: 60px; height: 60px; left: 0px; top: 0px; position: absolute; background: white"><img src="hat.png" /></div>
+                    <div style="width: 60px; height: 60px; left: 0px; top: 0px; position: absolute; background: white"><a href="https://ixdia.csueastbay.edu/about.html"><img src="hat.png" /></a></div>
                 </div>
             </div>
         </div>
