--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div style="width: 544px; height: 720px; left: 576px; top: 0px; position: absolute; background: white">
            <div id="portrait">
 <!--                 <script src="khushboo.js"></script> -->
-            <img src="logoo.gif" alt="A tessaract animation, Interation Design Logo">
+            <img src="11.gif" alt="A tessaract animation, Interation Design Logo">
             </div>
 
 
