--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div style="width: 1440px; height: 600px; left: 0px; top: 100px; position: absolute">
         <div style="width: 1440px; height: 800px; left: 0px; top: 100px; position: absolute"> <div id="portrait">
             <div id="sketch4Container">
-                <script src="sketch4.js" defer></script>
+                <script src="gazi.js" defer></script>
           </div>
 
 
@@ -142,7 +142,7 @@
         <div style="width: 448px; height: 510px; left: 0px; top: 94px; position: absolute; text-align: justify; color: black; font-size: 22px; font-family: Roboto; font-weight: 400; line-height: 30px; word-wrap: break-word">Located in the San Francisco Bay Area, the epicenter of the interactive digital media industry and technological innovation, the CSUEB Interaction Design and Interactive Art Graduate Program prepares students for successful careers across many growing industries. They work as Interaction Designers, Creative Technologists, Entrepreneurs, and User Interface (UI) Designers in top companies like Google, General Electric, Facebook as well as a host of smaller lean startups.<br/><br/>The Master of Arts in Interaction Design and Interactive Art is a STEM Designated (CIP 09.0702) program and qualifies for the STEM OPT extension.<br/></div>
         <div style="width: 544px; height: 720px; left: 576px; top: 0px; position: absolute; background: white">
            <div id="sketch3Container">
-<script src="sketch3.js" defer></script>
+<script src="khushboo.js" defer></script>
            
             </div>
 
