--- a/index.html
+++ b/index.html
@@ -81,9 +81,11 @@
 
 
     <div style="width: 1440px; height: 600px; left: 0px; top: 100px; position: absolute">
-        <div style="width: 1440px; height: 800px; left: 0px; top: 100px; position: absolute"> <div id="portrait">
-            <div id="sketch3Container">
+        <div id="sketch3Container">
                 <script src="gazi.js" defer></script>
+                      </div>
+          </div>
+        <div style="width: 1440px; height: 800px; left: 0px; top: 100px; position: absolute">
           </div>
 
 
