--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
 
 
 
+// THIS IS THE HEADING- MESSESD UP
+
+            <div style="width: 640px; height: 264px; padding-left: 50px; padding-right: 50px; left: 0px; top: 0px; position: absolute"><span style="color: black; font-size: 52px; font-family: Roboto; font-weight: 500; line-height: 78px; word-wrap: break-word">Master of Arts in</span><span style="color: black; font-size: 67px; font-family: Roboto; font-weight: 500; line-height: 78px; word-wrap: break-word"> <br/></span><span style="color: black; font-size: 62px; font-family: Roboto; font-weight: 500; line-height: 78px; word-wrap: break-word">Interaction Design And <br/>Interactive Art</span></div>
 
 
-            <div style="width: 640px; height: 264px; left: 0px; top: 80px; position: absolute"><span style="color: black; font-size: 52px; font-family: Roboto; font-weight: 500; line-height: 78px; word-wrap: break-word">Master of Arts in</span><span style="color: black; font-size: 67px; font-family: Roboto; font-weight: 500; line-height: 78px; word-wrap: break-word"> <br/></span><span style="color: black; font-size: 62px; font-family: Roboto; font-weight: 500; line-height: 78px; word-wrap: break-word">Interaction Design And <br/>Interactive Art</span></div>
 
-
-
-            <div style="width: 353px; height: 44px; left: 0px; top: 364px; position: absolute; color: black; font-size: 25px; font-family: Roboto; font-weight: 400; line-height: 88px;">Start your journey today</div>
+            <div style="width: 353px; height: 44px; padding-left: 50px; padding-right: 50px; left: 0px; top: 364px; position: absolute; color: black; font-size: 25px; font-family: Roboto; font-weight: 400; line-height: 88px;">Start your journey today</div>
 
 
 
