--- a/index.html
+++ b/index.html
@@ -84,22 +84,16 @@
         <div id="sketch3Container">
                 <script src="gazi.js" defer></script>
                       </div>
-          </div>
-        <div style="width: 1440px; height: 800px; left: 0px; top: 100px; position: absolute">
-          </div>
 
 
-
-
-// THIS IS THE HEADING- MESSESD UP
-
-     
-div style="width: 640px; height: 389px; left: 160px; top: 37px; position: absolute">
+        // THIS IS THE HEADING
+        div style="width: 640px; height: 389px; left: 160px; top: 37px; position: absolute">
             <div style="width: 640px; height: 264px; left: 0px; top: 0px; position: absolute"><span style="color: black; font-size: 52px; font-family: Roboto; font-weight: 500; line-height: 78px; word-wrap: break-word">Master of Arts in</span><span style="color: black; font-size: 67px; font-family: Roboto; font-weight: 500; line-height: 78px; word-wrap: break-word"> <br/></span><span style="color: black; font-size: 62px; font-family: Roboto; font-weight: 500; line-height: 78px; word-wrap: break-word">Interaction Design And <br/>Interactive Art</span></div>
 
 
 
             <div style="width: 353px; height: 44px; left: 0px; top: 264px; position: absolute; color: black; font-size: 25px; font-family: Roboto; font-weight: 400; line-height: 88px;">Start your journey today</div>
+    
     <div style="width: 1120px; height: 400px; left: 160px; top: 585px; position: absolute">
         <div style="width: 352px; height: 400px; left: 0px; top: 0px; position: absolute; background: white; border-radius: 10px; border: 2px #EE589C solid"></div>
         <div style="width: 60px; height: 60px; left: 150px; top: 41px; position: absolute; background: white">
