--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         canvas {
             position: absolute;
-            top: 100px;
+            top: 0px;
             left: 0;
         }
     </style>
@@ -62,7 +62,7 @@
 
 
         <div style="width: 202px; height: 64px; left: 160px; top: 16px; position: absolute">
-            <div style="left: 84px; top: 0px; position: absolute; color: black; font-size: 40px; font-family: Roboto; font-weight: 500; line-height: 40px; word-wrap: break-word">MA IxDIA</a></div>
+            <div style="left: 84px; top: 0px; position: absolute; color: black; font-size: 40px; font-family: Roboto; font-weight: 500; line-height: 40px; ">MA IxDIA</a></div>
             <img style="width: 62px; height: 62px; left: 0px; top: 0px; position: absolute" src="logo.png" />
         </div>
     </div>
@@ -151,7 +151,7 @@
     </style>
 
 <body>
-    <div style="left: 516px; top: 42px; position: absolute; text-align: center; color: #636363; font-size: 14px; font-family: Roboto; font-weight: 400; line-height: 30px; word-wrap: break-word" class="copyright-notice">Copyright © 2023 Designed and developed by Khushboo and Gazi</div>
+    <div style="left: 316px; top: 42px; position: absolute; text-align: center; color: #636363; font-size: 14px; font-family: Roboto; font-weight: 400; line-height: 30px; word-wrap: break-word" class="copyright-notice">Copyright © 2023 Designed and developed by Khushboo and Gazi</div>
 
 </body>
 
